# FileFalconPro

./: .gitignore  CONTRIBUTING.md  Pipfile  README.md  config.py  main.py  pyproject.toml  requirements.txt
FileFalconEnv/: pyvenv.cfg
gui/: main_window.py
modules/: file_operations.py
operations/: file_extensions.py  file_operations.py
