[tool.poetry]
name = "filefalconpro"
version = "0.1.0"
description = ""
authors = ["daver987 <daveyalexander@outlook.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
PyQt6-Qt6 = "^6.7.0"
PyQt6-sip = "^13.6.0"
PyQt6 = "^6.7.0"
python-dotenv = "^1.0.1"
pydantic = "^2.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
