[project]
name = "filefalconpro"
version = "0.1.0"
description = ""
authors = [{ name = "daver987", email = "daveyalexander@outlook.com" }]
requires-python = "~=3.12"
readme = "README.md"
dependencies = [
    "PyQt6-Qt6>=6.7.0,<7",
    "PyQt6-sip>=13.6.0,<14",
    "PyQt6>=6.7.0,<7",
    "python-dotenv>=1.0.1,<2",
    "pydantic>=2.7.2,<3",
    "ruff>=0.5.1,<0.6",
    "rich>=13.7.1,<14",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
lint.fixable = ["ALL"]
lint.select = [
    "E",
    "F",
    "I"
]
lint.ignore = [
    "E203",
    "E501",
    "E231",
]
line-length = 100

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
docstring-code-format = true
docstring-code-line-length = 20
